<?xml version="1.0" encoding="utf-8"?>
<!-- Figma: "Cadastro Paciente" e "Cadastro Nutricionista" (mesma tela, muda CPF/CRN) -->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lh_background"
    tools:context=".ui.auth.CadastroActivity">

    <ScrollView
        android:id="@+id/rolagem"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/lh_screen_padding">

        <include
            android:id="@+id/header"
            layout="@layout/view_header"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <include
            android:id="@+id/togglePerfil"
            layout="@layout/view_perfil_toggle"
            android:layout_width="0dp"
            android:layout_height="44dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/header" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardCadastro"
            style="@style/LH.CardView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/lh_space_m"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/togglePerfil">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/lh_card_padding">

            <TextView
                android:id="@+id/tvLabelNome"
                style="@style/LH.Text.Label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:text="@string/label_nome_completo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/etNome"
                style="@style/LH.Input"
                android:layout_width="0dp"
                android:layout_marginTop="6dp"
                android:autofillHints="name"
                android:hint="@string/hint_nome"
                android:inputType="textPersonName|textCapWords"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvLabelNome" />

            <TextView
                android:id="@+id/tvLabelData"
                style="@style/LH.Text.Label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/label_data_nascimento"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/etNome" />

            <EditText
                android:id="@+id/etDataNascimento"
                style="@style/LH.Input"
                android:layout_width="0dp"
                android:layout_marginTop="6dp"
                android:drawableStart="@drawable/ic_calendar"
                android:drawableTint="@color/lh_text_hint"
                android:focusable="false"
                android:hint="@string/hint_data"
                android:importantForAutofill="no"
                android:inputType="none"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvLabelData" />

            <TextView
                android:id="@+id/tvLabelEmail"
                style="@style/LH.Text.Label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/label_email"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/etDataNascimento" />

            <EditText
                android:id="@+id/etEmail"
                style="@style/LH.Input"
                android:layout_width="0dp"
                android:layout_marginTop="6dp"
                android:autofillHints="emailAddress"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvLabelEmail" />

            <TextView
                android:id="@+id/tvLabelTelefone"
                style="@style/LH.Text.Label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/label_telefone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/etEmail" />

            <EditText
                android:id="@+id/etTelefone"
                style="@style/LH.Input"
                android:layout_width="0dp"
                android:layout_marginTop="6dp"
                android:autofillHints="phone"
                android:hint="@string/hint_telefone"
                android:inputType="phone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvLabelTelefone" />

            <!-- Campo que muda conforme o perfil: CRN (nutricionista) ou CPF (paciente) -->
            <TextView
                android:id="@+id/tvLabelDocumento"
                style="@style/LH.Text.Label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/label_cpf"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/etTelefone" />

            <EditText
                android:id="@+id/etDocumento"
                style="@style/LH.Input"
                android:layout_width="0dp"
                android:layout_marginTop="6dp"
                android:hint="@string/hint_cpf"
                android:importantForAutofill="no"
                android:inputType="number"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvLabelDocumento" />

            <TextView
                android:id="@+id/tvLabelSenha"
                style="@style/LH.Text.Label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/label_senha_acesso"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/etDocumento" />

            <EditText
                android:id="@+id/etSenha"
                style="@style/LH.Input"
                android:layout_width="0dp"
                android:layout_marginTop="6dp"
                android:autofillHints="newPassword"
                android:hint="@string/hint_senha"
                android:inputType="textPassword"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvLabelSenha" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnFinalizar"
                style="@style/LH.Button"
                android:layout_width="0dp"
                android:layout_marginTop="@dimen/lh_space_l"
                android:text="@string/finalizar_cadastro"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/etSenha" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
